backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend
  name: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend
    spec:
      containers:
      - image: 476114152571.dkr.ecr.eu-west-2.amazonaws.com/stockapp-backend:v1
        name: stockapp-backend
        resources: {}
status: {}
