frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: frontend
  name: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: frontend
    spec:
      containers:
      - image: 476114152571.dkr.ecr.eu-west-2.amazonaws.com/stockapp-frontend:v1
        name: stockapp-frontend
        resources: {}
status: {}
